overview: Add a tooltip for overview close button.

Bug: 824121
Change-Id: Ifb96edf110667d3e74584e3a3103602b02891b07
Reviewed-on: https://chromium-review.googlesource.com/974658
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545112}
Former-commit-id: 338fdc53f7f0c73d6748cac08a62f250591097a3